samples/_failures_safe/1761432272_928745_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89e12b1a.c: In function ‘main’:
./samples/SAFE/__tmp_89e12b1a.c:158:5: error: expected expression at end of input
  158 |     execute_operation(&
      |     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_89e12b1a.c:158:5: error: too few arguments to function ‘execute_operation’
./samples/SAFE/__tmp_89e12b1a.c:118:6: note: declared here
  118 | void execute_operation(Graph *g, GraphOperation op, int param1, int param2) {
      |      ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_89e12b1a.c:158:5: error: expected declaration or statement at end of input
  158 |     execute_operation(&
      |     ^~~~~~~~~~~~~~~~~
